[Cocoa] Adopt playback state properties of PIPViewController rdar://147281408 https://bugs.webkit.org/show_bug.cgi?id=289936
Reviewed by Andy Estes.

Provide more playback state information to PIPViewController via -updatePlaybackStateUsingBlock:.

* Source/WebCore/platform/mac/VideoPresentationInterfaceMac.h:
* Source/WebCore/platform/mac/VideoPresentationInterfaceMac.mm:
(-[WebVideoPresentationInterfaceMacObjC updateRate:andTimeControlStatus:]):
(-[WebVideoPresentationInterfaceMacObjC setDuration:]):
(-[WebVideoPresentationInterfaceMacObjC updateRate:currentTime:atAnchorTime:]):
(-[WebVideoPresentationInterfaceMacObjC updateCurrentTime:atAnchorTime:]):
(-[WebVideoPresentationInterfaceMacObjC estimatedElapsedTime]):
(-[WebVideoPresentationInterfaceMacObjC setMuted:]):
(-[WebVideoPresentationInterfaceMacObjC setVolume:]):
(-[WebVideoPresentationInterfaceMacObjC setUpPIPForVideoView:withFrame:inWindow:]):
(-[WebVideoPresentationInterfaceMacObjC pipAction:skipInterval:]):
(WebCore::VideoPresentationInterfaceMac::VideoPresentationInterfaceMac):
(WebCore::VideoPresentationInterfaceMac::durationChanged):
(WebCore::VideoPresentationInterfaceMac::currentTimeChanged):
(WebCore::VideoPresentationInterfaceMac::rateChanged):
(WebCore::VideoPresentationInterfaceMac::mutedChanged):
(WebCore::VideoPresentationInterfaceMac::volumeChanged):
(-[WebVideoPresentationInterfaceMacObjC updateIsPlaying:newPlaybackRate:]): Deleted.

Canonical link: https://commits.webkit.org/292425@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -5894,6 +5894,21 @@ PictureInPictureAPIEnabled:
       default: true
   disableInLockdownMode: true
 
+PictureInPicturePlaybackStateEnabled:
+  type: bool
+  status: internal
+  humanReadableName: "Picture-in-Picture Playback State Enabled"
+  humanReadableDescription: "Picture-in-Picture Playback State Enabled"
+  condition: HAVE(PIP_SKIP_PREROLL)
+  defaultValue:
+    WebKitLegacy:
+      default: false
+    WebKit:
+      default: false
+    WebCore:
+      default: false
+  disableInLockdownMode: true
+
 PitchCorrectionAlgorithm:
   type: uint32_t
   refinedType: WebCore::MediaPlayerEnums::PitchCorrectionAlgorithm
