Move API for file mapping to the new FileHandle class https://bugs.webkit.org/show_bug.cgi?id=290022
Reviewed by Darin Adler.

Move API for file mapping to the new FileHandle class since the new main entry point
to deal with file descriptors.

It used to be constructors and create() functions on the MappedFileData class, taking
a FileHandle as parameter. It's easier to just call `map()` on the FileHandle directly
and is more consistent with how other FileSystem APIs currently work.

* Source/JavaScriptCore/API/JSScript.mm:
(+[JSScript scriptOfType:memoryMappedFromASCIIFile:withSourceURL:andBytecodeCache:inVirtualMachine:error:]):
(-[JSScript readCache]):
* Source/JavaScriptCore/jsc.cpp:
* Source/JavaScriptCore/runtime/CachedTypes.cpp:
(JSC::Encoder::releaseMapped):
* Source/WTF/WTF.xcodeproj/project.pbxproj:
* Source/WTF/wtf/CMakeLists.txt:
* Source/WTF/wtf/FileHandle.h:
* Source/WTF/wtf/FileSystem.cpp:
(WTF::FileSystemImpl::mapFile):
(WTF::FileSystemImpl::createMappedFileData):
(WTF::FileSystemImpl::MappedFileData::MappedFileData): Deleted.
(WTF::FileSystemImpl::MappedFileData::mapFileHandle): Deleted.
* Source/WTF/wtf/FileSystem.h:
(WTF::FileSystemImpl::MappedFileData::leakHandle): Deleted.
(WTF::FileSystemImpl::MappedFileData::operator bool const): Deleted.
(WTF::FileSystemImpl::MappedFileData::size const): Deleted.
(): Deleted.
(WTF::FileSystemImpl::MappedFileData::fileMapping const): Deleted.
(WTF::FileSystemImpl::MappedFileData::span const): Deleted.
(WTF::FileSystemImpl::MappedFileData::mutableSpan): Deleted.
(WTF::FileSystemImpl::MappedFileData::create): Deleted.
(WTF::FileSystemImpl::MappedFileData::MappedFileData): Deleted.
(WTF::FileSystemImpl::m_fileMapping): Deleted.
(WTF::FileSystemImpl::MappedFileData::operator=): Deleted.
* Source/WTF/wtf/MappedFileData.h: Added.
(WTF::FileSystemImpl::MappedFileData::leakHandle):
(WTF::FileSystemImpl::MappedFileData::operator bool const):
(WTF::FileSystemImpl::MappedFileData::size const):
(WTF::FileSystemImpl::Mapped

--- a/Source/WTF/wtf/CMakeLists.txt
+++ b/Source/WTF/wtf/CMakeLists.txt
@@ -90,6 +90,7 @@ set(WTF_PUBLIC_HEADERS
     FastMalloc.h
     FastTLS.h
     FileHandle.h
+    FileLockMode.h
     FilePrintStream.h
     FileSystem.h
     FixedBitVector.h
@@ -173,6 +174,7 @@ set(WTF_PUBLIC_HEADERS
     MallocCommon.h
     MallocPtr.h
     MallocSpan.h
+    MappedFileData.h
     Markable.h
     MathExtras.h
     MediaTime.h
