Remove default constructor of FrameInfoData https://bugs.webkit.org/show_bug.cgi?id=290085
Reviewed by Chris Dumez.

FrameInfoData is only constructed in WebFrame::info()
and 2 places where we use legacyEmptyFrameInfo.
This will inhibit us from trying to reconstruct a FrameInfoData
from something that isn't a WebFrame.

* Source/WebKit/Shared/Extensions/WebExtensionFrameIdentifier.cpp:
(WebKit::toWebExtensionFrameIdentifier):
* Source/WebKit/Shared/FrameInfoData.cpp: Copied from Source/WebKit/Shared/FrameInfoData.h.
(WebKit::legacyEmptyFrameInfo):
* Source/WebKit/Shared/FrameInfoData.h:
* Source/WebKit/Shared/FrameInfoData.serialization.in:
* Source/WebKit/Sources.txt:
* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _convertPoint:fromFrame:toMainFrameCoordinates:]):
(-[WKWebView _convertRect:fromFrame:toMainFrameCoordinates:]):
* Source/WebKit/UIProcess/Downloads/DownloadProxy.cpp:
(WebKit::DownloadProxy::DownloadProxy):
(WebKit::legacyEmptyFrameInfo): Deleted.
* Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::didFailProvisionalLoadForFrame):
(WebKit::ProvisionalPageProxy::decidePolicyForNavigationActionAsync):
(WebKit::ProvisionalPageProxy::decidePolicyForResponse):
* Source/WebKit/UIProcess/UserMediaPermissionRequestProxy.h:
(WebKit::UserMediaPermissionRequestProxy::frameID const):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::loadRequestWithNavigationShared):
(WebKit::WebPageProxy::didSameDocumentNavigationForFrameViaJS):
(WebKit::WebPageProxy::createNewPage):
(WebKit::WebPageProxy::didPerformImmediateActionHitTest):
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/292471@main

--- a/Source/WebKit/Shared/FrameInfoData.serialization.in
+++ b/Source/WebKit/Shared/FrameInfoData.serialization.in
@@ -30,7 +30,7 @@ struct WebKit::FrameInfoData {
     WebCore::ResourceRequest request;
     WebCore::SecurityOriginData securityOrigin;
     String frameName;
-    Markable<WebCore::FrameIdentifier> frameID;
+    WebCore::FrameIdentifier frameID;
     Markable<WebCore::FrameIdentifier> parentFrameID;
     Markable<WebCore::ScriptExecutionContextIdentifier> documentID;
     WebCore::CertificateInfo certificateInfo;
