[CoreIPC] [GPU] WebCore::SVGFilter expression/effects members are not validated https://bugs.webkit.org/show_bug.cgi?id=289947 rdar://142968121
Reviewed by Said Abou-Hallawa.

Introduce validation at the IPC boundary to ensure SVGFilter expression indicies are in-bounds of the provided effects.

* LayoutTests/ipc/invalid-svgfilter-expression-crash-expected.txt: Added.
* LayoutTests/ipc/invalid-svgfilter-expression-crash.html: Added.
* Source/WebCore/svg/graphics/filters/SVGFilter.cpp:
(WebCore::SVGFilter::isValidSVGFilterExpression):
* Source/WebCore/svg/graphics/filters/SVGFilter.h:
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/292483@main

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -7714,7 +7714,7 @@ class WebCore::FilterOperations {
     WebCore::FloatRect targetBoundingBox();
     WebCore::SVGUnitTypes::SVGUnitType primitiveUnits();
     WebCore::SVGFilterExpression expression();
-    Vector<Ref<WebCore::FilterEffect>> effects();
+    [Validator='WebCore::SVGFilter::isValidSVGFilterExpression(*expression, *effects)'] Vector<Ref<WebCore::FilterEffect>> effects();
     std::optional<WebCore::RenderingResourceIdentifier> renderingResourceIdentifierIfExists();
 
     OptionSet<WebCore::FilterRenderingMode> filterRenderingModes();
