Make B3 Origin a tagged union https://bugs.webkit.org/show_bug.cgi?id=288575
Reviewed by Keith Miller.

In https://commits.webkit.org/289952@main, Yusuke introduced
a new way to handle OMG inline frame exceptions using code origins.

- We no longer allow origins to be imprecise on ARMv7
- We slightly reduce the number of extended wasm opcodes that can be
    packed to add a tag bit to OpcodeOrigin
- We use this tag bit in OMG to verify that we get the expected
    origin kind

At least on ARMv7, we can have both OMGOrigins and OpcodeOrigins,
so it remains to be investigated why this patch did not introduce
failures on 64-bit platforms.

* Source/JavaScriptCore/b3/B3Origin.cpp:
(JSC::B3::Origin::dump const):
* Source/JavaScriptCore/b3/B3Origin.h:
(JSC::B3::Origin::Origin):
(JSC::B3::Origin::isOMGOrigin const):
(JSC::B3::Origin::isPackedWasmOrigin const):
(JSC::B3::Origin::omgOrigin const):
(JSC::B3::Origin::maybeOMGOrigin const):
(JSC::B3::Origin::data const): Deleted.
* Source/JavaScriptCore/jit/PCToCodeOriginMap.h:
* Source/JavaScriptCore/wasm/WasmBBQJIT.h:
* Source/JavaScriptCore/wasm/WasmCallee.cpp:
(JSC::Wasm::OptimizingJITCallee::materializePCToOriginMap):
* Source/JavaScriptCore/wasm/WasmCompilationContext.h:
(): Deleted.
* Source/JavaScriptCore/wasm/WasmOMGIRGenerator.cpp:
(JSC::Wasm::OMGIRGenerator::emitExceptionCheck):
(JSC::Wasm::OMGIRGenerator::addThrow):
(JSC::Wasm::OMGIRGenerator::addThrowRef):
(JSC::Wasm::OMGIRGenerator::addRethrow):
(JSC::Wasm::parseAndCompileOMG):
* Source/JavaScriptCore/wasm/WasmOMGIRGenerator32_64.cpp:
(JSC::Wasm::OMGIRGenerator::origin):
(JSC::Wasm::parseAndCompileOMG):
* Source/JavaScriptCore/wasm/WasmOpcodeOrigin.h:
(JSC::Wasm::OpcodeOrigin::OpcodeOrigin):
(JSC::Wasm::OpcodeOrigin::opcode const):
(JSC::Wasm::OpcodeOrigin::ext1Opcode const):
(JSC::Wasm::OpcodeOrigin::simdOpcode const):
(JSC::Wasm::OpcodeOrigin::gcOpcode const):
(JSC::Wasm::OpcodeOrigin::atomicOpcode const):
(JSC::Wasm::OpcodeOrigin::location const):
(JSC::Wasm::O

--- a/Source/JavaScriptCore/CMakeLists.txt
+++ b/Source/JavaScriptCore/CMakeLists.txt
@@ -1301,6 +1301,7 @@ set(JavaScriptCore_PRIVATE_FRAMEWORK_HEADERS
     wasm/WasmName.h
     wasm/WasmNameSection.h
     wasm/WasmOSREntryData.h
+    wasm/WasmOpcodeOrigin.h
     wasm/WasmSIMDOpcodes.h
     wasm/WasmSections.h
     wasm/WasmTypeDefinition.h
