[macOS][GPUP] Address sandbox telemetry for IOKit user client related to camera https://bugs.webkit.org/show_bug.cgi?id=290176 rdar://147579185
Reviewed by Sihui Liu.

* Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in:

Canonical link: https://commits.webkit.org/292488@main

--- a/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
+++ b/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
@@ -828,6 +828,26 @@
             (extension "com.apple.webkit.extension.iokit")
             (iokit-user-client-class "H11ANEInDirectPathClient"))))
 
+(if (equal? (param "ENABLE_SANDBOX_MESSAGE_FILTER") "YES")
+    (allow IOKIT_OPEN_USER_CLIENT
+        (require-all
+            (extension "com.apple.webkit.extension.iokit")
+            (iokit-user-client-class "H1xANELoadBalancerDirectPathClient"))
+        (apply-message-filter
+            (allow iokit-async-external-method
+                (iokit-method-number 2))
+            (allow iokit-external-method
+                (iokit-method-number 0 1))
+            (allow (with report) (with telemetry)
+                iokit-async-external-method
+                iokit-external-method
+                iokit-external-trap)))
+    ;; else
+    (allow IOKIT_OPEN_USER_CLIENT
+        (require-all
+            (extension "com.apple.webkit.extension.iokit")
+            (iokit-user-client-class "H1xANELoadBalancerDirectPathClient"))))
+
 (allow iokit-open-service
     (require-all
         (extension "com.apple.webkit.extension.iokit")
