--- a/Source/WebKit/Configurations/WebKitSwift.xcconfig
+++ b/Source/WebKit/Configurations/WebKitSwift.xcconfig
@@ -54,8 +54,10 @@ SWIFT_VERSION = 5.0;
 CLANG_INSTRUMENT_FOR_OPTIMIZATION_PROFILING = NO; // Disable PGO profile generation
 OTHER_LDFLAGS = $(inherited) $(SOURCE_VERSION_LDFLAGS) $(FRAMEWORK_LDFLAGS_$(WK_PLATFORM_NAME));
 
-FRAMEWORK_LDFLAGS_xros = -framework LinearMediaKit;
-FRAMEWORK_LDFLAGS_xrsimulator = -framework LinearMediaKit;
+FRAMEWORK_LDFLAGS_xros = -framework AVKit;
+FRAMEWORK_LDFLAGS_xrsimulator = -framework AVKit;
+FRAMEWORK_LDFLAGS_xros[sdk=xr*2.*] = -framework LinearMediaKit;
+FRAMEWORK_LDFLAGS_xrsimulator[sdk=xr*2.*] = -framework LinearMediaKit;
 
 // Use handwritten SPI modules on public SDKs.
 SWIFT_INCLUDE_PATHS = $(SWIFT_INCLUDE_PATHS_$(USE_INTERNAL_SDK));
