[JSC] Add a tool to enable profiling of source code that we execute. https://bugs.webkit.org/show_bug.cgi?id=290147 rdar://146258426
Reviewed by Yijia Huang.

If the JSC::SourceProfiler::g_profilerHook function pointer is set, we'll call it with the
source code that we will execute.  The data is passed to the g_profilerHook in the form of
a SourceProfiler::Payload struct.  The payload is versioned to allow tools to track format
changes going forward if needed.

If JSC::SourceProfiler::g_profilerHook is not set, this code is a no-op.

* Source/JavaScriptCore/CMakeLists.txt:
* Source/JavaScriptCore/JavaScriptCore.xcodeproj/project.pbxproj:
* Source/JavaScriptCore/Sources.txt:
* Source/JavaScriptCore/bytecode/UnlinkedFunctionExecutable.cpp:
(JSC::UnlinkedFunctionExecutable::link):
* Source/JavaScriptCore/interpreter/Interpreter.cpp:
(JSC::eval):
(JSC::Interpreter::executeProgram):
* Source/JavaScriptCore/runtime/JSGlobalObjectFunctions.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):
* Source/JavaScriptCore/runtime/JSModuleRecord.cpp:
(JSC::JSModuleRecord::link):
* Source/JavaScriptCore/tools/SourceProfiler.cpp: Added.
(JSC::SourceProfiler::profile):
* Source/JavaScriptCore/tools/SourceProfiler.h: Added.

Canonical link: https://commits.webkit.org/292513@main

--- a/Source/JavaScriptCore/CMakeLists.txt
+++ b/Source/JavaScriptCore/CMakeLists.txt
@@ -1270,6 +1270,7 @@ set(JavaScriptCore_PRIVATE_FRAMEWORK_HEADERS
 
     tools/Integrity.h
     tools/IntegrityInlines.h
+    tools/SourceProfiler.h
     tools/VMInspector.h
     tools/VMInspectorInlines.h
 
