--- a/Source/WebKit/NetworkProcess/Cookies/WebCookieManager.messages.in
+++ b/Source/WebKit/NetworkProcess/Cookies/WebCookieManager.messages.in
@@ -33,7 +33,7 @@ messages -> WebCookieManager {
     void DeleteCookiesForHostnames(PAL::SessionID sessionID, Vector<String> hostnames) -> ()
     void DeleteAllCookies(PAL::SessionID sessionID) -> ()
 
-    void SetCookie(PAL::SessionID sessionID, Vector<WebCore::Cookie> cookie) -> ()
+    void SetCookie(PAL::SessionID sessionID, Vector<WebCore::Cookie> cookie, uint64_t cookiesVersion) -> ()
     void SetCookies(PAL::SessionID sessionID, Vector<WebCore::Cookie> cookies, URL url, URL mainDocumentURL) -> ()
     void GetAllCookies(PAL::SessionID sessionID) -> (Vector<WebCore::Cookie> cookies)
     void GetCookies(PAL::SessionID sessionID, URL url) -> (Vector<WebCore::Cookie> cookies)
