Clarify RemoteDisplayListRecorder ownership https://bugs.webkit.org/show_bug.cgi?id=289238 rdar://146384034
Reviewed by Matt Woodrow.

RemoteRenderingBackend composition was:

RemoteRenderingBackend
  0..n RemoteDisplayListRecorder
  0..m RemoteImageBuffer
  0..k RemoteImageBufferSet
This was unneccessary, as RemoteRenderingBackend directly created
only RemoteImageBuffers and RemoteImageBufferSets. Additionally,
RemoteImageBufferSet created RemoteImageBuffers that were not actually
asked by the WebContent process.

RemoteDisplayListRecorder messages were by convention sent
to the identifier of the RemoteImageBuffer that owned it. This
caused part of the above confusion, as RemoteImageBufferSet was
forced to create an artificial RemoteImageBuffer.

RemoteSerializedImageBuffer was identified by its originating
RemoteImageBuffer. This caused part of the above confusion.

Fix by:
Change the RemoteRenderingBackend composition:

RemoteRenderingBackend
  0..n RemoteImageBuffer
      1 RemoteDisplayListRecorder
  0..m RemoteImageBufferSet
      1 RemoteDisplayListRecorder

Each RemoteImageBuffer has a context.
Each RemoteImageBufferSet has a context.

Add RemoteDisplayListRecorderIdentifier to identify
RemoteDisplayListRecorder unambiguously.

Change RemoteSerializedImageBufferIdentifier be a real type-specific
identifier. Previously it was an alias to unrelated
RenderingResourceIdentifier.

Make RemoteRenderingBackend::CreateImageBuffer select the
RemoteDisplayListRecorder identifier explictly. In other words,
the message is a create-type message for both RemoteImageBuffer and
RemoteDisplayListRecorder.

Make RemoteRenderingBackend::MoveToImageBuffer select the
RemoteImageBuffer and RemoteDisplayListRecorder identifier explictly. In
other words, the message is a create-type message for both
RemoteImageBuffer and RemoteDisplayListRecorder. The message is a
destroy-type message for RemoteSerializedImageBuffer.

Make RemoteRenderingBackend::MoveToSerializedBuffer select the
R

--- a/Source/WebKit/GPUProcess/RemoteSharedResourceCache.messages.in
+++ b/Source/WebKit/GPUProcess/RemoteSharedResourceCache.messages.in
@@ -24,7 +24,7 @@
 
 [ExceptionForEnabledBy]
 messages -> RemoteSharedResourceCache {
-    void ReleaseSerializedImageBuffer(WebCore::RenderingResourceIdentifier imageBuffer)
+    void ReleaseSerializedImageBuffer(WebKit::RemoteSerializedImageBufferIdentifier identifier)
 }
 
 #endif
